--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Quiznic</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="/quiznic/style.css">
 </head>
 
 <body>
@@ -23,7 +23,7 @@
     </nav>
 
     <header id="home">
-        <img src="/website banner quiznic.jpg" alt="" width="100%">
+        <img src="/quiznic/website banner quiznic.jpg" alt="" width="100%">
     </header>
 
     <div class="header">
@@ -32,7 +32,7 @@
 
     <div class="container" id="aboutus">
         <div class="img1">
-            <img src="/img1.jpg" alt="" width="100%" >
+            <img src="/quiznic/img1.jpg" alt="" width="100%" >
         </div>
 
         <div class="about">
@@ -44,9 +44,9 @@
     <div class="footer" id="footer">
         <p>All rights reserved. Copyright © QuizInc 2022</p>
 
-        <a href="https://www.facebook.com/quizinc.nitd/?epa=SEARCH_BOX" target="_blank" id="facebook"><img src="/facebook.png" alt="" width="30px" height="30px"></a>   
+        <a href="https://www.facebook.com/quizinc.nitd/?epa=SEARCH_BOX" target="_blank" id="facebook"><img src="/quiznic/facebook.png" alt="" width="30px" height="30px"></a>   
 
-        <a href="https://www.instagram.com/quizincnitdgp/" target="_blank" id="instagram"><img src="/instagram.png" alt="" width="30px" height="30px"></a>        
+        <a href="https://www.instagram.com/quizincnitdgp/" target="_blank" id="instagram"><img src="/quiznic/instagram.png" alt="" width="30px" height="30px"></a>        
            
     </div>
 </body>
